@@ -1,6 +1,7 @@
 ags (2.1.8)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed timeout of ags_osc_front_controller_delegate_thread()
 	* fixed ags_play_channel_run_master_remap_dependencies() to check if AgsRecallID present
 	* added ags_osc_status_controller_test.c
 	* added ags_osc_front_controller_test.c
